@@ -10,7 +10,7 @@
     <file preprocess="xml-stripblanks">menu-button.ui</file>
     <file preprocess="xml-stripblanks">preferences-dialog.ui</file>
     <file preprocess="xml-stripblanks">print-multiple-dialog.ui</file>
-    <file preprocess="xml-stripblanks">shortcuts-window.ui</file>
+    <file preprocess="xml-stripblanks">shortcuts-dialog.ui</file>
     <file preprocess="xml-stripblanks">start-view.ui</file>
     <file preprocess="xml-stripblanks">window.ui</file>
   </gresource>
