@@ -38,7 +38,7 @@ gee = dependency('gee-0.8')
 gio = dependency('gio-2.0', version: '>= @0@'.format(glib_version))
 glib = dependency('glib-2.0', version: '>= @0@'.format(glib_version))
 gtk = dependency('gtk4', version: '>= 4.18.0')
-adw = dependency('libadwaita-1', version: '>= 1.7')
+adw = dependency('libadwaita-1', version: '>= 1.8')
 json_glib = dependency('json-glib-1.0')
 qqwing = dependency('qqwing', version: '>= 1.3.4')
 threads = dependency('threads')
