@@ -11,7 +11,7 @@ src/blueprints/menu-button.blp
 src/blueprints/preferences-dialog.blp
 src/blueprints/print-multiple-dialog.blp
 src/blueprints/start-view.blp
-src/blueprints/shortcuts-window.blp
+src/blueprints/shortcuts-dialog.blp
 src/blueprints/window.blp
 
 src/gnome-sudoku.vala
