@@ -57,7 +57,7 @@ menu primary-menu {
 
     item {
       label: _("_Keyboard Shortcuts");
-      action: "app.shortcuts-window";
+      action: "app.shortcuts-dialog";
     }
 
     item {
