@@ -1,13 +1,14 @@
 50.alpha - Devel
 ==========================
 
+- Port Shortcuts Window to Shortcuts Dialog
 - Add duplicate warnings preference
 - Rename "Check against solution" preference to "Solution Warnings"
 - Remove warnings and highlighter settings
 - Remove custom game creation
 - Fix earmark warnings not getting cleared up when disabling the setting
 - Fix capitalization in print multiple dialog
-- Fix right to left text direction for arrow keys
+- Fix right to left text direction for arrow keys (#121)
 
 49.0 - September 12, 2025
 ==========================
